Fixed bug on about.html on IPhone6

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -374,7 +374,7 @@ input[type="checkbox"]:checked ~ ul {
     }
 
     @media only screen and (max-width:480px) {
-
+        padding: 0;
         h2 {
             text-align: center;
         }
